home page updated:

--- a/online-test-frontend/src/locales/mr.json
+++ b/online-test-frontend/src/locales/mr.json
@@ -73,5 +73,17 @@
   "Your answers will be auto-submitted when time is up.": "वेळ संपल्यावर तुमची उत्तरे आपोआप सबमिट होतील.",
   "Any attempt to cheat may result in disqualification.": "फसवणूक करण्याचा कोणताही प्रयत्न अपात्रतेस कारणीभूत ठरू शकतो.",
   "I have read and agree to the test rules.": "मी चाचणीच्या नियमांचे वाचन केले आहे आणि मी सहमत आहे.",
-  "Start Test": "चाचणी सुरू करा"
+  "Start Test": "चाचणी सुरू करा",
+  "Why Choose Us?": "आम्हाला का निवडावे?",
+  "Discover features that make learning engaging and effective.": "शिकणे आकर्षक आणि प्रभावी बनवणाऱ्या वैशिष्ट्यांची शोध घ्या.",
+  "Interactive Tests": "परस्परसंवादी चाचण्या",
+  "Engaging and interactive tests designed to challenge and improve your skills": "तुमच्या कौशल्यांना आव्हान देणाऱ्या आणि सुधारण्याच्या उद्देशाने तयार केलेल्या आकर्षक व परस्परसंवादी चाचण्या.",
+  "Instant Results": "तुरंत परिणाम",
+  "Get detailed feedback and scores immediately after completing your tests": "तुमच्या चाचण्या पूर्ण केल्यानंतर त्वरित तपशीलवार अभिप्राय व गुण मिळवा.",
+  "Track Progress": "प्रगतीचा मागोवा घ्या",
+  "Monitor your learning journey with comprehensive progress tracking": "व्यापक प्रगती ट्रॅकिंगसह तुमच्या शिकण्याच्या प्रवासाचे निरीक्षण करा.",
+  "Group Learning": "गट शिक्षण",
+  "Join groups and compete with peers to enhance your learning experience": "गटांमध्ये सामील व्हा आणि सहकाऱ्यांसोबत स्पर्धा करा, ज्यामुळे तुमचा शिकण्याचा अनुभव सुधारेल.",
+  "Start your learning journey today": "आजच तुमचा शिकण्याचा प्रवास सुरू करा",
+  "© 2025 Online Test Platform": "© 2025 ऑनलाइन टेस्ट प्लॅटफॉर्म"
 }
