reset password done demo

--- a/online-test-frontend/src/locales/en.json
+++ b/online-test-frontend/src/locales/en.json
@@ -59,5 +59,30 @@
   "Your answers will be auto-submitted when time is up.": "Your answers will be auto-submitted when time is up.",
   "Any attempt to cheat may result in disqualification.": "Any attempt to cheat may result in disqualification.",
   "I have read and agree to the test rules.": "I have read and agree to the test rules.",
-  "Start Test": "Start Test"
+  "Start Test": "Start Test",
+  "Forgot Password": "Forgot Password",
+  "Enter your email": "Enter your email",
+  "Send Reset Email": "Send Reset Email",
+  "Back to Login": "Back to Login",
+  "Name": "Name",
+  "Already have an account?": "Already have an account?",
+  "Reset Password": "Reset Password",
+  "Enter new password": "Enter new password",
+  "Verifying your email...": "Verifying your email...",
+  "Email verified successfully!": "Email verified successfully!",
+  "You can now log in to your account.": "You can now log in to your account.",
+  "Go to Login": "Go to Login",
+  "Verification failed": "Verification failed",
+  "Why Choose Us?": "Why Choose Us?",
+  "Discover features that make learning engaging and effective.": "Discover features that make learning engaging and effective.",
+  "Interactive Tests": "Interactive Tests",
+  "Engaging and interactive tests designed to challenge and improve your skills": "Engaging and interactive tests designed to challenge and improve your skills",
+  "Instant Results": "Instant Results",
+  "Get detailed feedback and scores immediately after completing your tests": "Get detailed feedback and scores immediately after completing your tests",
+  "Track Progress": "Track Progress",
+  "Monitor your learning journey with comprehensive progress tracking": "Monitor your learning journey with comprehensive progress tracking",
+  "Group Learning": "Group Learning",
+  "Join groups and compete with peers to enhance your learning experience": "Join groups and compete with peers to enhance your learning experience",
+  "Start your learning journey today": "Start your learning journey today",
+  "© 2025 Online Test Platform": "© 2025 Online Test Platform"
 }
